Stuck At The Database initial Test. Seems INSERT coding problem occurs.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,16 +10,16 @@
             android:title="Import" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Add Student"
+            android:onClick="gotoAddStudent" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Edit Student"
+            android:onClick="gotoEditStudent" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Delete Student"
+            android:onClick="gotoDeleteStudent" />
     </group>
 
     <item android:title="Communicate">
