--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,24 +14,31 @@
     android:gravity="bottom">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:adjustViewBounds="false"
         android:contentDescription="@string/nav_header_desc"
-        android:id="@+id/imageView" />
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        app:srcCompat="@mipmap/northwesternlogo" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/navHeaderTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
+        android:id="@+id/navHeaderSubtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle"
-        android:id="@+id/textView" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/nav_header_subtitle" />
 
 </LinearLayout>
